Configure PostgreSQL dialect and enable Spring DevTools in application.yaml; update dependencies to latest release in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'io.jsonwebtoken:jjwt-api'
-    implementation 'org.telegram:telegrambots-spring-boot-starter'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui'
+    implementation 'io.jsonwebtoken:jjwt-api:latest.release'
+    implementation 'org.telegram:telegrambots-spring-boot-starter:latest.release'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:latest.release'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:latest.release'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:latest.release'
     annotationProcessor 'org.projectlombok:lombok'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
