--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+              dialect: org.hibernate.dialect.PostgreSQLDialect
   web:
     cors:
       allowed-origins: "*"
@@ -20,6 +23,9 @@ spring:
       password:
         encoder:
           type: bcrypt
+  devtools:
+    restart:
+      enabled: true
 
 jwt:
   secret: ${JWT_SECRET}
