--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'io.jsonwebtoken:jjwt-api:latest.release'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'org.telegram:telegrambots-spring-boot-starter:latest.release'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:latest.release'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:latest.release'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:latest.release'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     annotationProcessor 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
