--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,9 +14,10 @@ spring:
   web:
     cors:
       allowed-origins: "*"
-      allowed-methods: "GET,POST,PUT,DELETE,OPTIONS"
-      allowed-headers: "*"
-      allow-credentials: true
+      allowed-methods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
+      allowed-headers: "Authorization,Content-Type"
+      exposed-headers: "Authorization"
+      allow-credentials: false
       max-age: 3600
   security:
     user:
