--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,14 @@ plugins {
 }
 
 group = 'io.github.irfnhanif'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 configurations {
